<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModifyHistory">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modify your consultation!"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The information that you don´t\nwanna change let it empty"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/historyIDM"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:hint="@string/historyId"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/historyDateM"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:hint="@string/consultationDate"
        android:inputType="date"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:focusable="false"
        android:clickable="true"/>

    <EditText
        android:id="@+id/vaccineM"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:hint="@string/vaccine"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>


    <EditText
        android:id="@+id/doseM"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:hint="@string/dose"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/cuantityM"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:hint="@string/cuantity"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/reasonM"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:hint="@string/reason"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/commentsM"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:hint="@string/comments"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <Button
        android:id="@+id/btnSendModifyInformation"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/modifyMedicalHistory"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:padding="12dp"/>

</LinearLayout>