<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PetRegister">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register your pet!"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        />

    <EditText
        android:id="@+id/breed"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/breed"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/daily_walks"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/daily_walks"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/food"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/food"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/weight"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/ID"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/ID_owner"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>


    <EditText
        android:id="@+id/description"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/description"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/register_pet"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:padding="12dp"/>

</LinearLayout>