<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIGN UP!"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="26dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:inputType="text"
        android:text="@string/first_name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="60dp">

    </EditText>

    <EditText
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:inputType="text"
        android:text="@string/last_name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="118dp">

    </EditText>

    <EditText
        android:id="@+id/ID"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:inputType="text"
        android:text="@string/ID"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="179dp">

    </EditText>

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:inputType="text"
        android:text="@string/address"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="240dp">

    </EditText>

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:inputType="text"
        android:text="@string/mail"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="299dp">

    </EditText>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:inputType="text"
        android:text="@string/phone_number"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="358dp">

    </EditText>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="466dp"
        tools:ignore="MissingConstraints">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>