<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModifyPet">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modify your pet information!"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/brand_secondary"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The information that you don´t wanna change let it empty"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/brand_primary"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/petNameM"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/petName"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:textColor="@color/brand_accent"
        android:textColorHint="@color/brand_accent"
        android:backgroundTint="@color/brand_secondary"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/breedM"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/breed"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:textColor="@color/brand_accent"
        android:textColorHint="@color/brand_accent"
        android:backgroundTint="@color/brand_secondary"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/ageM"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        android:layout_gravity="center"
        android:textColor="@color/brand_accent"
        android:textColorHint="@color/brand_accent"
        android:backgroundTint="@color/brand_secondary"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/weightM"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/weight"
        android:inputType="number"
        android:layout_gravity="center"
        android:textColor="@color/brand_accent"
        android:textColorHint="@color/brand_accent"
        android:backgroundTint="@color/brand_secondary"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/foodM"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/food"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:textColor="@color/brand_accent"
        android:textColorHint="@color/brand_accent"
        android:backgroundTint="@color/brand_secondary"
        android:layout_margin="12dp"/>


    <EditText
        android:id="@+id/amountFoodM"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/daily_food"
        android:inputType="number"
        android:layout_gravity="center"
        android:textColor="@color/brand_accent"
        android:textColorHint="@color/brand_accent"
        android:backgroundTint="@color/brand_secondary"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/amountWalksM"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/daily_walks"
        android:inputType="number"
        android:layout_gravity="center"
        android:textColor="@color/brand_accent"
        android:textColorHint="@color/brand_accent"
        android:backgroundTint="@color/brand_secondary"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/descriptionM"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/description"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:textColor="@color/brand_accent"
        android:textColorHint="@color/brand_accent"
        android:backgroundTint="@color/brand_secondary"
        android:layout_margin="12dp"/>


    <Button
        android:id="@+id/btnSendModifyInformation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/modifyPetInformation"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:padding="12dp"/>

</LinearLayout>
