<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        android:id="@+id/titleUsr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/send_pet_section"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:onClick="sendPetSection"
                android:padding="12dp"
                android:text="@string/petSection" />

            <Button
                android:id="@+id/send_vaccine_section"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:onClick="sendVaccineSection"
                android:padding="12dp"
                android:text="@string/vaccineSection" />

            <Button
                android:id="@+id/send_medicalHistory_section"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:onClick="sendMedicalHistorySection"
                android:padding="12dp"
                android:text="@string/medicalHistorySection" />

            <Button
                android:id="@+id/send_recordatory_section"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:onClick="sendRecordatorySection"
                android:padding="12dp"
                android:text="@string/recordatorySection" />

            <Button
                android:id="@+id/viewChats"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:onClick="viewChats"
                android:padding="12dp"
                android:text="@string/viewChats" />

            <Button
                android:id="@+id/emergency"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:onClick="emergencyContact"
                android:padding="12dp"
                android:text="@string/emergency" />

            <Button
                android:id="@+id/send_Map_activity"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:onClick="sendActivityMap"
                android:padding="12dp"
                android:text="@string/map" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
