<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddConsultationMedicalHistory">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medical Consultation Register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"/>

    <EditText
        android:id="@+id/consultationDate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/consultationDate"
        android:inputType="date"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>
    <EditText
        android:id="@+id/consultationReason"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/consultationReason"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/petState"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/petState"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/designatedVeterinary"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/designatedVeterinary"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/consultationResults"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/consultationResults"
        android:inputType="textCapWords"
        android:layout_gravity="center"
        android:layout_margin="12dp"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="Register Consultation Information"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:padding="12dp"/>

</LinearLayout>
